--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-radio-button ~ .mat-radio-button {
+    margin-left: 16px;
+  }
+  .mat-card{
+      margin:2%;
+     
+  }
+  
