--- a/src/app/easteregg/easteregg.component.html
+++ b/src/app/easteregg/easteregg.component.html
@@ -1,6 +1,6 @@
 <mat-card>
 
-<h2>Easter egg!!!  Nothing useful here :). Just to show that router and JSON request is working</h2>
+<h2>Easter egg!!!  Nothing useful here :). Just to show that routing and JSON request is working</h2>
 
 <div *ngFor="let record of allrecords">
         {{record.id}} {{record.title}}
